; ModuleID = '/home/carl/AnghaBench/kphp-kdb/util/extr_replicator.c_push_packet.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/util/extr_replicator.c_push_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connection = type { i32 }
%struct.TYPE_2__ = type { i32 }

@MAX_PACKET_PAYLOAD = common dso_local global i32 0, align 4
@send_packet = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @push_packet(%struct.connection* %0, i32 %1) #0 {
  %3 = alloca %struct.connection*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store %struct.connection* %0, %struct.connection** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* @MAX_PACKET_PAYLOAD, align 4
  %10 = icmp ule i32 %8, %9
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert(i32 %11)
  %13 = load i32, i32* %4, align 4
  %14 = sub nsw i32 0, %13
  %15 = and i32 %14, 3
  store i32 %15, i32* %5, align 4
  %16 = load i32*, i32** @send_packet, align 8
  %17 = bitcast i32* %16 to i8*
  %18 = getelementptr inbounds i8, i8* %17, i64 8
  %19 = load i32, i32* %4, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds i8, i8* %18, i64 %20
  store i8* %21, i8** %6, align 8
  %22 = load i8*, i8** %6, align 8
  %23 = load i32, i32* %5, align 4
  %24 = call i32 @memset(i8* %22, i32 0, i32 %23)
  %25 = load i32, i32* %4, align 4
  %26 = add nsw i32 %25, 12
  %27 = add nsw i32 %26, 3
  %28 = ashr i32 %27, 2
  store i32 %28, i32* %7, align 4
  %29 = load i32, i32* %7, align 4
  %30 = mul nsw i32 %29, 4
  %31 = load i32*, i32** @send_packet, align 8
  %32 = getelementptr inbounds i32, i32* %31, i64 0
  store i32 %30, i32* %32, align 4
  %33 = load %struct.connection*, %struct.connection** %3, align 8
  %34 = call %struct.TYPE_2__* @RPCC_DATA(%struct.connection* %33)
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = add nsw i32 %36, 1
  store i32 %37, i32* %35, align 4
  %38 = load i32*, i32** @send_packet, align 8
  %39 = getelementptr inbounds i32, i32* %38, i64 1
  store i32 %36, i32* %39, align 4
  %40 = load i32*, i32** @send_packet, align 8
  %41 = load i32, i32* %7, align 4
  %42 = mul nsw i32 %41, 4
  %43 = sub nsw i32 %42, 4
  %44 = call i32 @compute_crc32(i32* %40, i32 %43)
  %45 = load i32*, i32** @send_packet, align 8
  %46 = load i32, i32* %7, align 4
  %47 = sub nsw i32 %46, 1
  %48 = sext i32 %47 to i64
  %49 = getelementptr inbounds i32, i32* %45, i64 %48
  store i32 %44, i32* %49, align 4
  %50 = load %struct.connection*, %struct.connection** %3, align 8
  %51 = getelementptr inbounds %struct.connection, %struct.connection* %50, i32 0, i32 0
  %52 = load i32*, i32** @send_packet, align 8
  %53 = load i32, i32* %7, align 4
  %54 = mul nsw i32 %53, 4
  %55 = call i32 @write_out(i32* %51, i32* %52, i32 %54)
  %56 = load i32, i32* %7, align 4
  %57 = mul nsw i32 %56, 4
  %58 = icmp eq i32 %55, %57
  %59 = zext i1 %58 to i32
  %60 = call i32 @assert(i32 %59)
  %61 = load %struct.connection*, %struct.connection** %3, align 8
  %62 = call i32 @flush_later(%struct.connection* %61)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @memset(i8*, i32, i32) #1

declare dso_local %struct.TYPE_2__* @RPCC_DATA(%struct.connection*) #1

declare dso_local i32 @compute_crc32(i32*, i32) #1

declare dso_local i32 @write_out(i32*, i32*, i32) #1

declare dso_local i32 @flush_later(%struct.connection*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
